# Flowntier

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  PROJECT_SPEC.md  README.md  RELEASE_v0.4.22.md  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
.nwt/: .counter.json  metadata.json
.nwt/indices/: files.json  tags.json
.nwt/timeline/: 000001.json  000002.json  000003.json  000004.json  000005.json  000006.json  000007.json  000008.json  000009.json  000012.json  000013.json  000014.json  000016.json  000023.json  000024.json  000025.json  000026.json  000027.json  000030.json  000031.json  000035.json  000037.json  000038.json  000045.json  000046.json  000047.json  000048.json  000050.json  000051.json  000052.json  000054.json  000055.json  000059.json  000060.json  000062.json  000063.json  000066.json  000068.json  000069.json  000070.json  (+31 more)
.validation/: dogfood.py  e2e_smoke.py  patch_settings.py  release_notes.md  release_notes_v0.2.3.md  release_notes_v0.2.5.md  release_notes_v0.3.md
.validation/outputs/: critic_a_smoke.json
acceptance/: ledger_stage_a_backend.txt  stage_a_backend.txt  stage_c_frontend.txt
acceptance/admin-task/backend/: db.js  package.json  server.js  users.db-shm  users.db-wal
acceptance/admin-task/frontend/: index.html
acceptance/ledger-task/backend/: db.js  db.js.bak  ledger.db-shm  ledger.db-wal  package.json  seed.js  server.js
acceptance/ledger-task/frontend/: index.html
apps/ChiefApp/: README.md  local.properties
apps/ChiefApp/app/: build.gradle.kts
apps/ChiefApp/app/src/main/: AndroidManifest.xml
apps/ChiefApp/app/src/main/res/drawable/: ic_launcher_foreground.xml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/.tauri-stubs/: core.js  event.js  path.js  shell.js
apps/desktop/src/: App.tsx  simulator.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src-tauri/tests/: e2e_nwt_standalone.rs
apps/desktop/src/components/: ConnectionBanner.tsx  ErrorBadge.tsx  ErrorBoundary.tsx  FileTree.tsx  PerTaskConsole.tsx  PlanGraph.tsx  SearchBugPanel.tsx  StartupScreen.tsx  Welcome.tsx  WorkdirSetup.tsx
apps/desktop/src/hooks/: useAgentStream.ts  useCustomModels.ts  useEventStream.ts  useWorkflowState.ts
apps/desktop/src/i18n/: en-US.ts  zh-CN.ts
apps/desktop/src/lib/: api.ts  errs.ts  updater.ts  useConnection.ts
apps/desktop/src/tools/: nwt.ts
apps/desktop/src/zones/: BottomConsole.tsx  CenterPanel.tsx  ChatZone.tsx  CommandDock.tsx  LeftRoster.tsx  PluginsPanel.tsx  RightPanel.tsx  Settings.tsx  TopBar.tsx
apps/runtime/: aco_runtime.spec  pyproject.toml
apps/runtime/src/aco_runtime/: __init__.py  main.py  pipe_server.py
apps/runtime/src/aco_runtime/api/routes/: events.py  plugins.py  providers.py  router.py  settings.py  workflow.py
crates/agent-core/: Cargo.toml
crates/agent-core/examples/: probe_minimax.rs  probe_minimax_stream.rs  smoke_minimax.rs  smoke_minimax_tools.rs
crates/agent-core/src/: context.rs  event.rs  lib.rs  loop_.rs  message.rs  workspace.rs
crates/agent-core/src/prompt/: mod.rs
crates/agent-core/src/provider/: anthropic.rs  mod.rs  openai.rs
crates/agent-core/src/tool/: bash.rs  grep.rs  mod.rs  nwt.rs  patch.rs  read.rs  write.rs
crates/config/src/: lib.rs
crates/pipe-server/: Cargo.toml
crates/pipe-server/src/: dispatcher.rs  handlers.rs  lib.rs  logs.rs  orchestrator.rs  protocol.rs  providers.rs  scheduler.rs  server.rs  tarot.rs  ws_bridge.rs
crates/pipe-server/src/secrets/: fallback.rs  mod.rs
crates/pipe-server/tests/: e2e_pipe.rs
crates/storage/: Cargo.toml
crates/storage/migrations/: 0002_rename_aco_to_flowntier.sql  0003_secrets_and_providers.sql  0004_role_overrides.sql  0005_quota_failures.sql
crates/storage/src/: lib.rs
crates/storage/tests/: e2e_upgrade.rs
crates/tauri-core/: Cargo.toml
crates/tauri-core/src/: lib.rs  logging.rs
docs/: .gitkeep  ACCEPTANCE_v0.3.md  ACCEPTANCE_v0.3_LEDGER.md  AGENT_PROTOCOL.md  ARCHITECTURE.md  DEPENDENCIES.md  DEPRECATIONS.md  FAQ.md  INSTALLER.md  ISSUES_GRAPH.md  ROADMAP.md  SECURITY.md  TECH_STACK.md  V03_DELETIONS.md
history/: PROJECT_SPEC.md  README.md  pyproject.toml
history/docs/: AGENT_PROTOCOL.md  CONFIG.md  DEPENDENCIES.md  PLUGIN_SPEC.md  PROMPT_GUIDE.md  PROVIDER_SPEC.md  SECURITY.md  STORAGE_SPEC.md  TASK_GRAPH.md  UI_GUIDELINES.md  WORKFLOW_SPEC.md
history/plans/: ReleasePlan.md
history/proposals/: phase2-1-plan-parser.md  phase2-4-react-flow-ui.md
history/python-harness/: critic_a_smoke.py  dogfood.py  e2e_smoke.py  fix_c3.py  gen_flowntier_icon.py
history/python-harness/docs-dogfooding/: inspect-cli.md
history/python-harness/dogfooding/wf_5b3c423859/: final.json  plan.json
history/release-notes/: UPGRADE_v0.2.5-to-v0.3.0.md  release_notes_v0.2.2.md
history/scripts/: validate_minimax.py
plans/: ReleasePlan.md
runtime/: pyproject.toml
runtime/src/aco_runtime_lib/: __init__.py  __main__.py  secrets.py
runtime/src/aco_runtime_lib/agents/: __init__.py  base.py  chief.py  critic.py  final_reviewer.py  planner.py  reporter.py  worker.py  worker_v2.py
runtime/src/aco_runtime_lib/plugins/: base.py
runtime/src/aco_runtime_lib/plugins/builtin/: echo.py  file_ops.py  git.py  python.py
runtime/src/aco_runtime_lib/providers/: __init__.py  anthropic.py  google.py  manager.py  minimax.py  mock.py  openai.py  presets.py  router.py
runtime/src/aco_runtime_lib/workflow/: __init__.py  orchestrator.py  persistence.py  plan_parser.py  plan_scheduler.py  recovery.py  state_machine.py
runtime/tests/: test_critic_a_smoke.py  test_e2e_workflow.py  test_final_reviewer.py  test_plan_parser.py  test_plan_scheduler.py  test_plugins.py  test_secrets.py  test_state_machine.py
scripts/: build-with-patch.cjs  diagnose.cmd  patch-nsis.cjs  screenshot_ui.js  snap.js  snap_ai_run.js  snap_running.js  snap_settings.js
tools/: brace_check.py  brace_trace.py  bump_version.sh
(+13 files in other folders)
