[workspace]
resolver = "2"
members = [
    "crates/tauri-core",
    "crates/event-bus",
    "crates/agent-core",
    "crates/pipe-server",
    "crates/config",
    "crates/storage",
    "apps/desktop/src-tauri",
]

[workspace.package]
version     = "0.4.0"
edition     = "2021"
rust-version = "1.85"
license     = "MIT"
authors     = ["Thatgfsj <thatgfsj@gmail.com>"]
repository  = "https://github.com/Thatgfsj/Flowntier"

[workspace.dependencies]
# Async
tokio        = { version = "1.40", features = ["full"] }
tokio-util   = { version = "0.7", features = ["rt"] }
async-trait  = "0.1"
futures      = "0.3"

# Serialization
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
serde_yaml   = "0.9"

# Errors
thiserror    = "1"
anyhow       = "1"

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender   = "0.2"

# Database
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "sqlite",
    "macros",
    "chrono",
    "json",
    "migrate",
] }

# Concurrency
crossbeam-channel = "0.5"
parking_lot       = "0.12"

# HTTP client (used by /api/providers/{id}/models to fetch
# the upstream /v1/models endpoint). We use rustls-tls so we
# don't need OpenSSL on the build host.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Tauri (used by tauri-core; non-optional because Cargo workspace
# deps cannot be optional — Rust 1.83+)
tauri         = { version = "2" }
tauri-plugin-shell = { version = "2" }

# CLI
clap = { version = "4", features = ["derive"] }

# Time
chrono   = { version = "0.4", features = ["serde"] }
ulid     = { version = "1", features = ["serde"] }

# FS notify
notify = "6"

# Secrets
# keyring = "3" with three native backends:
#   * apple-native  → Keychain on macOS (not used in v0.4, but
#                     enabled so v0.5 macOS support compiles clean)
#   * windows-native → Credential Manager (DPAPI-backed) on Windows
#   * sync-secret-service → libsecret on Linux
# On Linux without libsecret (headless containers, minimal
# distros) the runtime falls back to a passphrase-protected file
# under $XDG_DATA_HOME/flowntier/master.key. See
# crates/pipe-server/src/secrets.rs::FallbackKeychain.
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

# AES-GCM for wrapping individual secrets before writing
# ciphertext + nonce to SQLite.
aes-gcm = "0.10"
rand = "0.8"

# Zeroizing wrapper for in-memory plaintext (chairman-requested:
# reveal() must not leave the API key sitting on the heap
# unmasked after use).
zeroize = { version = "1.8", features = ["zeroize_derive"] }

# PTY
portable-pty = "0.8"

# Testing
insta   = "1.39"
mockall = "0.13"
proptest = "1"

[profile.release]
lto             = "thin"
codegen-units   = 1
strip           = "symbols"
opt-level       = 3

[profile.dev]
opt-level = 1
debug     = 1
