[project]
name        = "agent-company-os"
version     = "0.1.0"
description = "Agent Company OS — multi-agent AI software company"
readme      = "README.md"
license     = { text = "MIT" }
authors     = [{ name = "Thatgfsj", email = "thatgfsj@gmail.com" }]
requires-python = ">=3.11"

# This is the **workspace root** for uv. The two member projects are
# the sidecar (apps/runtime) and the library (runtime/).
[tool.uv.workspace]
members = ["apps/runtime", "runtime"]

[tool.ruff]
target-version = "py311"
line-length    = 100
extend-exclude = ["**/build/", "**/dist/"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # flake8-bandit (security)
    "RUF", # ruff-specific
    "TID", # tidy imports
]
ignore = [
    "S101", # asserts OK in tests
]

[tool.ruff.lint.per-file-ignores]
"runtime/tests/*"   = ["S101", "S106"]
"apps/runtime/*"    = ["S101"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version         = "3.11"
strict                 = true
warn_unused_configs    = true
warn_redundant_casts   = true
disallow_any_explicit  = true
disallow_any_generics  = true
no_implicit_optional   = true
check_untyped_defs     = true
show_error_codes       = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_any_explicit = false

[tool.pytest.ini_options]
minversion = "8.0"
testpaths  = ["runtime/tests", "apps/runtime/tests"]
addopts    = "-ra --strict-markers --strict-config"
asyncio_mode = "auto"
