[project]
name        = "aco-runtime-lib"
version     = "0.2.5"
description = "ACO AI runtime library (agents, workflow, providers, plugins, memory)"
readme      = "README.md"
license     = { text = "MIT" }
authors     = [{ name = "Thatgfsj", email = "thatgfsj@gmail.com" }]
requires-python = ">=3.11"

dependencies = [
    "pydantic>=2.9.0",
    "httpx>=0.27.0",
    "loguru>=0.7.0",
    "tenacity>=9.0.0",
    "asyncio-throttle>=1.0.2",
    "ulid-py>=1.1.0",
    # Encrypted secret store (Settings UI → OS keychain bridge).
    # On Windows uses Credential Manager (DPAPI); macOS Keychain;
    # Linux Secret Service. Pure-python wrapper, no native deps.
    "keyring>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "freezegun>=1.5.0",
    "respx>=0.21.0",
    "mypy>=1.13.0",
    "ruff>=0.7.0",
    "black>=24.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aco_runtime_lib"]
