[project]
name        = "aco-runtime"
0.2.3
description = "Python AI runtime sidecar for Agent Company OS (FastAPI + uvicorn)"
readme      = "README.md"
license     = { text = "MIT" }
authors     = [{ name = "Thatgfsj", email = "thatgfsj@gmail.com" }]
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "loguru>=0.7.0",
    "tenacity>=9.0.0",
    "rich>=13.9.0",
    "websockets>=13.0",
    "asyncio-throttle>=1.0.2",
    "aco-runtime-lib",  # sibling workspace member `runtime/`
]

[project.scripts]
aco-runtime = "aco_runtime.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aco_runtime"]
