[project]
name        = "aco-runtime"
version     = "0.2.5"
description = "Python AI runtime sidecar for Agent Company OS (FastAPI + uvicorn)"
readme      = "README.md"
license     = { text = "MIT" }
authors     = [{ name = "Thatgfsj", email = "thatgfsj@gmail.com" }]
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "loguru>=0.7.0",
    "tenacity>=9.0.0",
    "rich>=13.9.0",
    "asyncio-throttle>=1.0.2",
    "aco-runtime-lib",  # sibling workspace member `runtime/`
    # Windows named-pipe RPC + server-push events transport between the
    # Tauri shell and this runtime. Required on Windows; on macOS/Linux
    # the import is harmless (the Tauri shell only uses pipes on
    # Windows for now) but kept declared so the lockfile is consistent.
    "pywin32>=306; sys_platform == 'win32'",
]

[project.scripts]
aco-runtime = "aco_runtime.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aco_runtime"]
