[package]
name        = "agent-core"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }
description = "Embedded agent loop, tool registry, provider clients, and prompt engine for ACO (v0.3+). Replaces the Python runtime and Claude Code CLI sidecar."

[lints.clippy]
all      = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[dependencies]
# Workspace basics
tokio        = { workspace = true }
async-trait  = { workspace = true }
async-stream = "0.3"
futures      = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
ulid         = { workspace = true }
chrono       = { workspace = true }

# HTTP + SSE (LLM providers)
reqwest             = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
eventsource-stream  = "0.2"

# Bash tool: subprocess + signal
tokio-util = { version = "0.7", features = ["io"] }

# File ops
similar      = "2"   # unified-diff apply (patch tool)
ignore       = "0.4" # gitignore-aware walk (file tree)
globset      = "0.4" # glob matcher
walkdir      = "2"
regex        = "1"   # grep tool pattern

# Event bus integration
event-bus    = { path = "../event-bus" }

[dev-dependencies]
insta        = { workspace = true }
tokio        = { version = "1.40", features = ["full", "test-util"] }
mockall      = { workspace = true }
tempfile     = "3"
wiremock     = "0.6"
futures      = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest      = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
anyhow       = "1"