[package]
name        = "pipe-server"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }
description = "JSON-RPC + event-push server over a local IPC channel for Flowntier. Replaces apps/runtime/src/aco_runtime/pipe_server.py. Windows named pipes + Unix domain sockets."

[lints.clippy]
all      = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# Binary name was renamed from `aco-runtime` to `flowntier-runtime`
# in the 2026-06-24 rebrand; the source file is kept as
# `aco-runtime.rs` to preserve git history, so we bind the artifact
# name explicitly here.
[[bin]]
name = "flowntier-runtime"
path = "src/bin/aco-runtime.rs"

[dependencies]
tokio        = { workspace = true, features = ["full"] }
async-trait  = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
futures      = "0.3"
scopeguard   = "1"

# Agent core: the pipe server dispatches tasks into the in-process
# agent runtime.
agent-core   = { path = "../agent-core" }

[dev-dependencies]
tokio        = { workspace = true, features = ["test-util"] }
