[package]
name        = "pipe-server"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }
description = "JSON-RPC + event-push server over a local IPC channel for Flowntier. Windows named pipes + Unix domain sockets. Replaces the v0.2 Python sidecar (see history/docs/V03_DELETIONS.md)."

[lints.clippy]
all      = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# Binary name: `flowntier-runtime` (renamed from `aco-runtime` in
# the 2026-06-24 rebrand). Source file lives at src/bin/flowntier-runtime.rs.
[[bin]]
name = "flowntier-runtime"
path = "src/bin/flowntier-runtime.rs"

[dependencies]
tokio        = { workspace = true, features = ["full"] }
async-trait  = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
futures      = "0.3"
scopeguard   = "1"
rand         = "0.8"

# Agent core: the pipe server dispatches tasks into the in-process
# agent runtime.
agent-core   = { path = "../agent-core" }

[dev-dependencies]
tokio        = { workspace = true, features = ["test-util"] }
