[package]
name        = "storage"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }
description = "SQLite + FTS5 storage layer for Flowntier (workflows, tasks, usage, memory, prompts, plugins)"

[lints.clippy]
all = { level = "deny", priority = -1 }

[dependencies]
tokio        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
sqlx         = { workspace = true }
ulid         = { workspace = true }
chrono       = { workspace = true }
async-trait  = { workspace = true }
dirs         = "5"

[dev-dependencies]
insta        = { workspace = true }
tempfile     = "3"
sqlx         = { workspace = true }
