[package]
name        = "tauri-core"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }
description = "Tauri app entry, commands, and glue for Flowntier"

[lints.clippy]
all = { level = "deny", priority = -1 }

# Binary name: `flowntier` (renamed from `aco` in the 2026-06-24
# rebrand). Source file lives at src/bin/flowntier.rs.
[[bin]]
name = "flowntier"
path = "src/bin/flowntier.rs"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[dependencies]
tauri         = { workspace = true, features = [] }
tauri-plugin-shell = { workspace = true }
tokio         = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
clap          = { workspace = true }
anyhow        = { workspace = true }
event-bus     = { path = "../event-bus" }
config        = { path = "../config" }
storage       = { path = "../storage" }
ulid          = { workspace = true }
chrono        = { workspace = true }

[dev-dependencies]
insta         = { workspace = true }
tempfile      = "3"
