[package]
name        = "flowntier-desktop"
version     = "0.3.0"
description = "Tauri 2 shell for Flowntier"
edition     = "2021"
rust-version = "1.85"
license     = "MIT"
publish     = false

[lib]
name = "aco_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri         = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
tokio         = { version = "1", features = ["full"] }
tauri-core    = { path = "../../../crates/tauri-core" }
event-bus     = { path = "../../../crates/event-bus" }
config        = { path = "../../../crates/config" }
storage       = { path = "../../../crates/storage" }
tracing       = { workspace = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
